// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Fragment>
  <styles__CarouselWrapper>
    <styles__CarouselScrollArea
      onScroll={[Function]}
    >
      <styles__CarouselCard
        key="0"
      >
        <styles__CarouselCardInner
          isSelected={true}
        >
          <div
            key=".$0"
          >
            a
          </div>
        </styles__CarouselCardInner>
      </styles__CarouselCard>
      <styles__CarouselCard
        key="1"
      >
        <styles__CarouselCardInner
          isSelected={false}
        >
          <div
            key=".$1"
          >
            b
          </div>
        </styles__CarouselCardInner>
      </styles__CarouselCard>
      <styles__CarouselCard
        key="2"
      >
        <styles__CarouselCardInner
          isSelected={false}
        >
          <div
            key=".$2"
          >
            c
          </div>
        </styles__CarouselCardInner>
      </styles__CarouselCard>
    </styles__CarouselScrollArea>
    <styles__CarouselFadeOutLeft
      visible={false}
    />
    <styles__CarouselFadeOutRight
      visible={true}
    />
    <CarouselRightButton
      onClick={[Function]}
    />
  </styles__CarouselWrapper>
  <Layout__VerticalSpacer
    size="small"
  />
  <Dots
    count={3}
    currentPosition={0}
    scrollToPosition={[Function]}
  />
</Fragment>
`;

exports[`renders navigates correctly 1`] = `
<Fragment>
  <styles__CarouselWrapper>
    <styles__CarouselScrollArea
      onScroll={[Function]}
    >
      <styles__CarouselCard
        key="0"
      >
        <styles__CarouselCardInner
          isSelected={false}
        >
          <div
            key=".$0"
          >
            a
          </div>
        </styles__CarouselCardInner>
      </styles__CarouselCard>
      <styles__CarouselCard
        key="1"
      >
        <styles__CarouselCardInner
          isSelected={true}
        >
          <div
            key=".$1"
          >
            b
          </div>
        </styles__CarouselCardInner>
      </styles__CarouselCard>
      <styles__CarouselCard
        key="2"
      >
        <styles__CarouselCardInner
          isSelected={false}
        >
          <div
            key=".$2"
          >
            c
          </div>
        </styles__CarouselCardInner>
      </styles__CarouselCard>
    </styles__CarouselScrollArea>
    <styles__CarouselFadeOutLeft
      visible={true}
    />
    <styles__CarouselFadeOutRight
      visible={true}
    />
    <CarouselLeftButton
      onClick={[Function]}
    />
    <CarouselRightButton
      onClick={[Function]}
    />
  </styles__CarouselWrapper>
  <Layout__VerticalSpacer
    size="small"
  />
  <Dots
    count={3}
    currentPosition={1}
    scrollToPosition={[Function]}
  />
</Fragment>
`;
